--- a/PPAI.csproj
+++ b/PPAI.csproj
@@ -108,7 +108,8 @@
     <Compile Include="Entidades\CentroDeInvestigacion.cs" />
     <Compile Include="Entidades\Estado.cs" />
     <Compile Include="Controlador\GestorRegistrarIngresoRTMantenimientoCorrectivo.cs" />
-    <Compile Include="Entidades\Estados\Disponible.cs" />
+    <Compile Include="Entidades\Estados\DisponibleRT.cs" />
+    <Compile Include="Entidades\Estados\Estado.cs" />
     <Compile Include="Entidades\Mantenimiento.cs" />
     <Compile Include="Entidades\Marca.cs" />
     <Compile Include="Entidades\Modelo.cs" />
